lagt till betyg underkänd, godkänd, MVG

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             </div>
 
             <div id="answers" class="hide">
-                <h2 id="points"></h2>
+                <p id="points"></p>
+                <h2 id="grade"></h2>
                 <ol id="ol"></ol>
             </div>
 
